plugins {
    id 'java'
    id 'io.freefair.lombok' version '5.1.0'
}

sourceCompatibility = 14
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

sourceSets.main.java.srcDirs = [ "src/" ]

jar {
    from('src') {
        include '**/*.properties'
    }
}